Add a custom error page, insert infinite busy-wait loop to fix #1

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,3 +9,7 @@ spring.datasource.hikari.connection-timeout=${CONN_TIMEOUT}
 spring.datasource.hikari.initialization-fail-timeout=${FAIL_TIMEOUT}
 spring.jpa.hibernate.ddl-auto=validate
 server.port=${PORT}
+server.error.include-message=always
+server.error.include-binding-errors=always
+server.error.include-stacktrace=always
+server.error.whitelabel.enabled=false
